добавление RececleVeiw и библиотеки Glide

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,11 @@
     <string name="subject_support">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
     <string name="message_support">«Спасибо разработчикам и разработчицам за крутое приложение!»</string>
     <string name="agreement_uri" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="Smells_Like_Teen_Spirit_uri" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music115/v4/7b/58/c2/7b58c21a-2b51-2bb2-e59a-9bb9b96ad8c3/00602567924166.rgb.jpg/100x100bb.jpg</string>
+    <string name="Billie_Jean_uri" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/3d/9d/38/3d9d3811-71f0-3a0e-1ada-3004e56ff852/827969428726.jpg/100x100bb.jpg</string>
+    <string name="Stayin_Alive_uri" translatable="false">https://is4-ssl.mzstatic.com/image/thumb/Music115/v4/1f/80/1f/1f801fc1-8c0f-ea3e-d3e5-387c6619619e/16UMGIM86640.rgb.jpg/100x100bb.jpg</string>
+    <string name="Whole_Lotta_Love_uri" translatable="false">https://is2-ssl.mzstatic.com/image/thumb/Music62/v4/7e/17/e3/7e17e33f-2efa-2a36-e916-7f808576cf6b/mzm.fyigqcbs.jpg/100x100bb.jpg</string>
+    <string name="Sweet_Child_uri" translatable="false">https://is5-ssl.mzstatic.com/image/thumb/Music125/v4/a0/4d/c4/a04dc484-03cc-02aa-fa82-5334fcb4bc16/18UMGIM24878.rgb.jpg/100x100bb.jpg</string>
 
 
 </resources>
