добавление истории поиска и смены темы в приложении

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -12,5 +12,7 @@
     <string name="nothing_founded">Nothing founded</string>
     <string name="communication_error">Communication problems\n\nThe upload failed. Please check\nyour internet connection</string>
     <string name="reload_button">Reload</string>
+    <string name="searched">You searched</string>
+    <string name="clear_history">Clear history</string>
 
 </resources>
