--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="nothing_founded">Ничего не нашлось</string>
     <string name="communication_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
     <string name="reload_button">Обновить</string>
+    <string name="searched">Вы искали</string>
+    <string name="clear_history">Очистить историю</string>
 
 </resources>
