--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -19,5 +19,6 @@
     <string name="year">Year</string>
     <string name="album">Track collection</string>
     <string name="trackTime">Track time</string>
+    <string name="notPreview">This track has not preview</string>
 
 </resources>
