--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="search">Search</string>
-    <string name="media_library">Media</string>
+    <string name="media_library">Medialibrary</string>
     <string name="settings">Settings</string>
     <string name="switcher_theme">Night mode</string>
     <string name="share">Share the app</string>
@@ -20,5 +20,10 @@
     <string name="album">Track collection</string>
     <string name="trackTime">Track time</string>
     <string name="notPreview">This track has not preview</string>
+    <string name="emptyMedia">Your medialibrary is empty</string>
+    <string name="addPlaylist">New playlist</string>
+    <string name="emptyPlaylist">You haven\'t\ncreated any playlists</string>
+    <string name="favorites_track">Favorites tracks</string>
+    <string name="playlists">Playlists</string>
 
 </resources>
